tests/specs/serve/type_check2/main.out
Check [WILDCARD]
TS2339 [ERROR]: Property 'doesnt_exist' does not exist on type 'Request'.
    console.log(request.doesnt_exist);
                        ~~~~~~~~~~~~
    at [WILDCARD]main.ts:3:25

error: Type checking failed.

  info: The program failed type-checking, but it still might work correctly.
  hint: Re-run with --no-check to skip type-checking.
